@@ -8,7 +8,6 @@
     <!-- List of all factories to init -->
     <prop name="factory.initialize.00">de.schlund.pfixxml.loader.AppLoader</prop>
     <prop name="factory.initialize.02">de.schlund.pfixxml.targets.SPCacheFactory</prop>
-    <prop name="factory.initialize.03">de.schlund.pfixxml.exceptionhandler.ExceptionHandler</prop>
     <prop name="factory.initialize.04">de.schlund.pfixxml.targets.cachestat.SPCacheStatistic</prop>
     <prop name="factory.initialize.05">de.schlund.pfixxml.perflogging.PerfLogging</prop>
     <!--<prop name="factory.initialize.06">de.schlund.pfixxml.jmx.JmxServerFactory</prop>-->
